// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils > buildingCards getBuildingCards matches snapshot 1`] = `
[
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-almacen-de-arcilla.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 731,
    "y": 212.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-almacen-de-madera.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 850,
    "y": 212.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-i-altar.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 671.5,
    "y": 263.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-i-banos.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 790.5,
    "y": 263.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-i-botica.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 909.5,
    "y": 263.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-campo-almacen-de-madera.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 612,
    "y": 314.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-campo-maderero.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 731,
    "y": 314.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-cantera.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 850,
    "y": 314.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-cristaleria.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 969,
    "y": 314.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-i-establos.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 552.5,
    "y": 365.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-i-explotacion-de-arcilla.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 671.5,
    "y": 365.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-i-farmacia.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 790.5,
    "y": 365.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-i-guarnicion.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 909.5,
    "y": 365.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-i-palenque.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 1028.5,
    "y": 365.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-prensa.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 493,
    "y": 416.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-reserva-de-arcilla.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 612,
    "y": 416.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-reserva-de-madera.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 731,
    "y": 416.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-reserva-de-piedra.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 850,
    "y": 416.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-scriptorium.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 969,
    "y": 416.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-taberna.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 1088,
    "y": 416.5,
  },
]
`;

exports[`utils > buildingCards getBuildingCards matches snapshot 2`] = `
[
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-acueducto.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 493,
    "y": 212.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-aduana.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 612,
    "y": 212.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-aserradero.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 731,
    "y": 212.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-barracones.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 850,
    "y": 212.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-biblioteca.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 969,
    "y": 212.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-campo-de-tiro.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 1088,
    "y": 212.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-ii-caravasar.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 552.5,
    "y": 263.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-ii-cerveceria.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 671.5,
    "y": 263.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-ii-criadero-de-caballos.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 790.5,
    "y": 263.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-ii-enfermeria.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 909.5,
    "y": 263.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-ii-escuela.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 1028.5,
    "y": 263.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-estatua.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 612,
    "y": 314.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-fabrica-de-ladrillos.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 731,
    "y": 314.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-foro.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 850,
    "y": 314.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-jusgado.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 969,
    "y": 314.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-ii-laboratorio.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 671.5,
    "y": 365.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-ii-mina-descubierta.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 790.5,
    "y": 365.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-ii-murallas.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 909.5,
    "y": 365.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-plaza-de-armas.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 731,
    "y": 416.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-secadero.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 850,
    "y": 416.5,
  },
]
`;

exports[`utils > buildingCards getBuildingCards matches snapshot 3`] = `
[
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-academia.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 731,
    "y": 212.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-ameria.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 850,
    "y": 212.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-iii-arena.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 671.5,
    "y": 263.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-iii-arsenal.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 790.5,
    "y": 263.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-iii-ayuntamento.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 909.5,
    "y": 263.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-camara-de-comercio.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 612,
    "y": 314.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-circo.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 731,
    "y": 314.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-deposito-de-armas.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 850,
    "y": 314.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-estudio.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 969,
    "y": 314.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-iii-faro.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 671.5,
    "y": 365.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-iii-fortificaciones.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 909.5,
    "y": 365.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-jardines.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 612,
    "y": 416.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-obelisco.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 731,
    "y": 416.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-observatorio.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 850,
    "y": 416.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-palacio-de-justicia.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 969,
    "y": 416.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-iii-palacio.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 671.5,
    "y": 467.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-iii-panteon.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 790.5,
    "y": 467.5,
  },
  {
    "faceDown": true,
    "id": "",
    "imageFile": "building-g-gremio-de-armadores.jpg",
    "imageFileBackface": "building-g-back.jpg",
    "type": "building",
    "x": 909.5,
    "y": 467.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-g-gremio-de-cientificos.jpg",
    "imageFileBackface": "building-g-back.jpg",
    "type": "building",
    "x": 731,
    "y": 518.5,
  },
  {
    "faceDown": false,
    "id": "",
    "imageFile": "building-g-gremio-de-construciones.jpg",
    "imageFileBackface": "building-g-back.jpg",
    "type": "building",
    "x": 850,
    "y": 518.5,
  },
]
`;

exports[`utils > buildingCards getBuildingCardsPlacement places first age cards 1`] = `
[
  {
    "x": 731,
    "y": 0,
  },
  {
    "x": 850,
    "y": 0,
  },
  {
    "x": 671.5,
    "y": 51,
  },
  {
    "x": 790.5,
    "y": 51,
  },
  {
    "x": 909.5,
    "y": 51,
  },
  {
    "x": 612,
    "y": 102,
  },
  {
    "x": 731,
    "y": 102,
  },
  {
    "x": 850,
    "y": 102,
  },
  {
    "x": 969,
    "y": 102,
  },
  {
    "x": 552.5,
    "y": 153,
  },
  {
    "x": 671.5,
    "y": 153,
  },
  {
    "x": 790.5,
    "y": 153,
  },
  {
    "x": 909.5,
    "y": 153,
  },
  {
    "x": 1028.5,
    "y": 153,
  },
  {
    "x": 493,
    "y": 204,
  },
  {
    "x": 612,
    "y": 204,
  },
  {
    "x": 731,
    "y": 204,
  },
  {
    "x": 850,
    "y": 204,
  },
  {
    "x": 969,
    "y": 204,
  },
  {
    "x": 1088,
    "y": 204,
  },
]
`;

exports[`utils > buildingCards getBuildingCardsPlacement places second age cards 1`] = `
[
  {
    "x": 493,
    "y": 0,
  },
  {
    "x": 612,
    "y": 0,
  },
  {
    "x": 731,
    "y": 0,
  },
  {
    "x": 850,
    "y": 0,
  },
  {
    "x": 969,
    "y": 0,
  },
  {
    "x": 1088,
    "y": 0,
  },
  {
    "x": 552.5,
    "y": 51,
  },
  {
    "x": 671.5,
    "y": 51,
  },
  {
    "x": 790.5,
    "y": 51,
  },
  {
    "x": 909.5,
    "y": 51,
  },
  {
    "x": 1028.5,
    "y": 51,
  },
  {
    "x": 612,
    "y": 102,
  },
  {
    "x": 731,
    "y": 102,
  },
  {
    "x": 850,
    "y": 102,
  },
  {
    "x": 969,
    "y": 102,
  },
  {
    "x": 671.5,
    "y": 153,
  },
  {
    "x": 790.5,
    "y": 153,
  },
  {
    "x": 909.5,
    "y": 153,
  },
  {
    "x": 731,
    "y": 204,
  },
  {
    "x": 850,
    "y": 204,
  },
]
`;

exports[`utils > buildingCards getBuildingCardsPlacement places third age cards 1`] = `
[
  {
    "x": 731,
    "y": 0,
  },
  {
    "x": 850,
    "y": 0,
  },
  {
    "x": 671.5,
    "y": 51,
  },
  {
    "x": 790.5,
    "y": 51,
  },
  {
    "x": 909.5,
    "y": 51,
  },
  {
    "x": 612,
    "y": 102,
  },
  {
    "x": 731,
    "y": 102,
  },
  {
    "x": 850,
    "y": 102,
  },
  {
    "x": 969,
    "y": 102,
  },
  {
    "x": 731,
    "y": 153,
  },
  {
    "x": 850,
    "y": 153,
  },
  {
    "x": 612,
    "y": 204,
  },
  {
    "x": 731,
    "y": 204,
  },
  {
    "x": 850,
    "y": 204,
  },
  {
    "x": 969,
    "y": 204,
  },
  {
    "x": 671.5,
    "y": 255,
  },
  {
    "x": 790.5,
    "y": 255,
  },
  {
    "x": 909.5,
    "y": 255,
  },
  {
    "x": 731,
    "y": 306,
  },
  {
    "x": 850,
    "y": 306,
  },
]
`;
